--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "simple-crdt-text",
+  "name": "@josephg/simple-crdt-text",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "license": "MIT",
+  "scripts": {
+    "prepare": "tsc"
+  },
+  "files": [
+    "dist/src/*"
+  ],
   "dependencies": {
-    "@types/node": "^14.14.36",
     "binary-search": "^1.3.6",
-    "map2": "^1.1.2",
+    "map2": "^1.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.36",
     "mocha": "^8.3.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
