--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "binary-search": "^1.3.6",
-    "map2": "^1.1.2"
+    "map2": "^1.1.2",
+    "unicount": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.36",
